--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Trash2Trash
+
+spring.datasource.name=Trash2Trash
+
+spring.datasource.username=postgres
+
+spring.datasource.password=postgres1
+
+spring.security.user.password=<Tom#064980>
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
